# libdpcp

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README  README.md  configure.ac  dpcp.sln  dpcp.vcxproj  dpcp.vcxproj.filters  dpcp_wof2.vcxproj  dpcp_wof2.vcxproj.filters  sources.props
.ci/: Makefile  do_release.sh  job_matrix.yaml  proj_jjb.yaml
.ci/dockerfiles/: Dockerfile.rhel8.6.release
.ci/pipeline/: dr_weekly_jjb.yaml  dr_weekly_matrix.yaml  release_jjb.yaml  release_matrix_job.yaml
.ci/scripts/: doca_install.sh
.ci/windows/: build_and_prepare_all.cmd  gtest-filter.txt  map_ewdk_iso.ps1  map_network_drives.cmd  windows_proj_jjb.yaml
.dockers/: Dockerfile.fedora32  Dockerfile.oel8.4  Dockerfile.oel8.6  Dockerfile.oel8.7  Dockerfile.rhel7.7  Dockerfile.rhel7.8  Dockerfile.rhel7.9  Dockerfile.rhel8.1  Dockerfile.rhel8.3  Dockerfile.rhel8.4  Dockerfile.rhel8.4.arm  Dockerfile.rhel8.6  Dockerfile.rhel8.6.arm  Dockerfile.rhel9.2  Dockerfile.ubuntu18.04  Dockerfile.ubuntu20.04  Dockerfile.ubuntu20.04.arm64  Dockerfile.ubuntu22.04  Dockerfile.ubuntu22.04.arm64  Dockerfile.ubuntu24.04
cmake/: DpcpConfig.cmake  DpcpUtilities.cmake  FindVerbs.cmake
config/m4/: cuda.m4  func.m4  linking_optimization.m4  verbs.m4
config/windows/: Project.props  Project.vcxproj-post.inc  Project.vcxproj-pre.inc
contrib/: build_pkg.sh  jenkins.groovy  test_jenkins.sh
contrib/MLNX_WinOF2_DevX_SDK/: build_id.txt
contrib/MLNX_WinOF2_DevX_SDK/Documentation/: MLNX_WinOF2_DevX_SDK_Readme.txt
contrib/MLNX_WinOF2_DevX_SDK/inc/: mlx5_ifc_devx.h  mlx5cma.h  mlx5devx.h  mlx5doca.h  mlx5verbs.h
contrib/MLNX_WinOF2_DevX_SDK/lib/: mlx5devx.lib
contrib/jenkins_tests/: build.sh  compiler.sh  copyright-check-map.yaml  copyrights.sh  cov.sh  cppcheck.sh  csbuild.sh  globals.sh  gtest.sh  rpm.sh  style.conf  style.sh
contrib/scripts/: dpcp.spec.in
debian/: changelog.in  control  copyright  dpcp.install  rules  watch
src/: CMakeLists.txt  Makefile.am
src/api/: CMakeLists.txt  dpcp.h
src/dcmd/: CMakeLists.txt  dcmd.h  prm.h
src/dcmd/base/: CMakeLists.txt  base_action.h  base_ctx.h  base_device.h  base_flow.h  base_obj.h  base_provider.h  base_uar.h  base_umem.h
src/dcmd/linux/: CMakeLists.txt  action.cpp  action.h  compchannel.cpp  compchannel.h  ctx.cpp  ctx.h  def.h  device.cpp  device.h  flow.cpp  flow.h  obj.cpp  obj.h  prm.h  provider.cpp  provider.h  uar.cpp  uar.h  umem.cpp  umem.h
src/dcmd/windows/: CMakeLists.txt  action.cpp  action.h  compchannel.cpp  compchannel.h  ctx.cpp  ctx.h  def.h  device.cpp  device.h  flow.cpp  flow.h  obj.cpp  obj.h  prm.h  provider.cpp  provider.h  uar.cpp  uar.h  umem.cpp  umem.h
src/dpcp/: CMakeLists.txt  adapter.cpp  cq.cpp  dek.cpp  dpcp.cpp  dpcp_obj.cpp  eq.cpp  flow_action.cpp  flow_group.cpp  flow_matcher.cpp  flow_rule_ex.cpp  flow_table.cpp  forwardable_obj.cpp  fr.cpp  internal.h  mkey.cpp  parser_graph_node.cpp  rq.cpp  sq.cpp  tag_buffer_table_obj.cpp  tir.cpp  tis.cpp
src/utils/: CMakeLists.txt  os.h
src/utils/linux/: CMakeLists.txt  log.cpp  log.h  utils.cpp  utils.h
src/utils/windows/: CMakeLists.txt  log.cpp  log.h  stdafx.cpp  stdafx.h  utils.cpp  utils.h
tests/: CMakeLists.txt
tests/gtest/: CMakeLists.txt  Makefile.am  README.md  dpcp-gtest.vcxproj  dpcp-gtest.vcxproj.filters  dpcp-gtest_wof2.vcxproj  dpcp-gtest_wof2.vcxproj.filters  main.cpp  sources.props
tests/gtest/common/: CMakeLists.txt  base.cpp  base.h  cmn.h  def.h  gtest-all.cpp  log.h  sys.cpp  sys.h  tap.h
tests/gtest/dcmd/: CMakeLists.txt  dcmd_base.cpp  dcmd_base.h  dcmd_compchannel.cpp  dcmd_ctx.cpp  dcmd_device.cpp  dcmd_obj.cpp  dcmd_provider.cpp
tests/gtest/dpcp/: CMakeLists.txt  adapter_tests.cpp  dek_tests.cpp  dpcp_base.cpp  dpcp_base.h  flow_group_tests.cpp  flow_rule_ex_tests.cpp  flow_table_tests.cpp  fr_tests.cpp  mkey_tests.cpp  obj_tests.cpp  parser_graph_node_tests.cpp  pd_tests.cpp  pp_tests.cpp  provider_tests.cpp  rq_dpp_tests.cpp  rq_ibq_tests.cpp  rq_tests.cpp  sq_tests.cpp  td_tests.cpp  tir_tests.cpp  tis_tests.cpp  uar_tests.cpp
tests/gtest/include/: getopt.h
